# TripleX

./: README.md
src/: .gitignore  hash_algos.cpp  hash_algos.hpp  meson.build  triplex.cpp
src/block/header/: difficulty.hpp  difficulty_declaration.hpp
src/crypto/: hash.hpp
src/general/: hash_triple.hpp
